--- a/templates/replication_slave/recovery.conf.erb
+++ b/templates/replication_slave/recovery.conf.erb
@@ -1,7 +1,7 @@
 standby_mode = 'on' # enables stand-by (readonly) mode
 
 # Connect to the master postgres server using the replicator user we created.
-primary_conninfo = 'host=<%= node['postgresql']['replication']['master'] %> port=<%= node['postgresql']['port'] %> user=<%= node['postgresql']['replication']['user'] %>'
+primary_conninfo = 'host=<%= node["postgres"]['replication']['master'] %> port=<%= node["postgres"]['port'] %> user=<%= node["postgres"]['replication']['user'] %>'
 
 # Specifies a trigger file whose presence should cause streaming replication to
 # end (i.e., failover).
