--- a/templates/default/postgresql.conf.standard.erb
+++ b/templates/default/postgresql.conf.standard.erb
@@ -275,13 +275,13 @@ effective_cache_size = <%= node["postgres"]["effective_cache_size"] %>
 
 # - Where to Log -
 
-#log_destination = '<%= node["postgres"]["log_destination"] %>'   # Valid values are combinations of
+log_destination = '<%= node["postgres"]["log_destination"] %>'   # Valid values are combinations of
           # stderr, csvlog, syslog, and eventlog,
           # depending on platform.  csvlog
           # requires logging_collector to be on.
 
 # This is used when logging to stderr:
-#logging_collector = <%= node["postgres"]["logging_collector"] %>    # Enable capturing of stderr and csvlog
+logging_collector = <%= node["postgres"]["logging_collector"] %>    # Enable capturing of stderr and csvlog
           # into log files. Required to be on for
           # csvlogs.
           # (change requires restart)
@@ -289,9 +289,9 @@ effective_cache_size = <%= node["postgres"]["effective_cache_size"] %>
 # These are only used if logging_collector is on:
 #log_directory = '<%= node["postgres"]["log_directory"] %>'   # directory where log files are written,
           # can be absolute or relative to PGDATA
-#log_filename = '<%= node["postgres"]["log_filename"] %>'  # log file name pattern,
+log_filename = '<%= node["postgres"]["log_filename"] %>'  # log file name pattern,
           # can include strftime() escapes
-#log_file_mode = <%= node["postgres"]["log_file_mode"] %>     # creation mode for log files,
+log_file_mode = <%= node["postgres"]["log_file_mode"] %>     # creation mode for log files,
           # begin with 0 to use octal notation
 #log_truncate_on_rotation = <%= node["postgres"]["log_truncate_on_rotation"] %>   # If on, an existing log file with the
           # same name as the new log file will be
@@ -301,9 +301,9 @@ effective_cache_size = <%= node["postgres"]["effective_cache_size"] %>
           # or size-driven rotation.  Default is
           # off, meaning append to existing files
           # in all cases.
-#log_rotation_age = <%= node["postgres"]["log_rotation_age"] %>      # Automatic rotation of logfiles will
+log_rotation_age = <%= node["postgres"]["log_rotation_age"] %>      # Automatic rotation of logfiles will
           # happen after that time.  0 disables.
-#log_rotation_size = <%= node["postgres"]["log_rotation_size"] %>   # Automatic rotation of logfiles will
+log_rotation_size = <%= node["postgres"]["log_rotation_size"] %>   # Automatic rotation of logfiles will
           # happen after that much log output.
           # 0 disables.
 
@@ -370,12 +370,12 @@ effective_cache_size = <%= node["postgres"]["effective_cache_size"] %>
 #debug_print_rewritten = <%= node["postgres"]["debug_print_rewritten"] %>
 #debug_print_plan = <%= node["postgres"]["debug_print_plan"] %>
 #debug_pretty_print = <%= node["postgres"]["debug_pretty_print"] %>
-#log_checkpoints = <%= node["postgres"]["log_checkpoints"] %>
-#log_connections = <%= node["postgres"]["log_connections"] %>
-#log_disconnections = <%= node["postgres"]["log_disconnections"] %>
-#log_duration = <%= node["postgres"]["log_duration"] %>
-#log_error_verbosity = <%= node["postgres"]["log_error_verbosity"] %>    # terse, default, or verbose messages
-#log_hostname = <%= node["postgres"]["log_hostname"] %>
+log_checkpoints = <%= node["postgres"]["log_checkpoints"] %>
+log_connections = <%= node["postgres"]["log_connections"] %>
+log_disconnections = <%= node["postgres"]["log_disconnections"] %>
+log_duration = <%= node["postgres"]["log_duration"] %>
+log_error_verbosity = <%= node["postgres"]["log_error_verbosity"] %>    # terse, default, or verbose messages
+log_hostname = <%= node["postgres"]["log_hostname"] %>
 log_line_prefix = '<%= node["postgres"]["log_line_prefix"] %>'     # special values:
           #   %a = application name
           #   %u = user name
@@ -397,7 +397,7 @@ log_line_prefix = '<%= node["postgres"]["log_line_prefix"] %>'     # special val
           #   %% = '%'
           # e.g. '[%u%%%d] '
 #log_lock_waits = <%= node["postgres"]["log_lock_waits"] %>     # log lock waits >= deadlock_timeout
-#log_statement = '<%= node["postgres"]["log_statement"] %>'     # none, ddl, mod, all
+log_statement = '<%= node["postgres"]["log_statement"] %>'     # none, ddl, mod, all
 #log_temp_files = <%= node["postgres"]["log_temp_files"] %>      # log temporary files equal or larger
           # than the specified size in kilobytes;
           # -1 disables, 0 logs all temp files
@@ -420,10 +420,10 @@ log_line_prefix = '<%= node["postgres"]["log_line_prefix"] %>'     # special val
 
 # - Statistics Monitoring -
 
-#log_parser_stats = <%= node["postgres"]["log_parser_stats"] %>
-#log_planner_stats = <%= node["postgres"]["log_planner_stats"] %>
-#log_executor_stats = <%= node["postgres"]["log_executor_stats"] %>
-#log_statement_stats = <%= node["postgres"]["log_statement_stats"] %>
+log_parser_stats = <%= node["postgres"]["log_parser_stats"] %>
+log_planner_stats = <%= node["postgres"]["log_planner_stats"] %>
+log_executor_stats = <%= node["postgres"]["log_executor_stats"] %>
+log_statement_stats = <%= node["postgres"]["log_statement_stats"] %>
 
 
 #------------------------------------------------------------------------------
