Small fixes to pgpool config

--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -16,6 +16,8 @@ port = 5432
 pcp_port = 9898
 log_destination = 'syslog'
 insert_lock = on
+socket_dir = '/var/run/postgresql'
+pool_passwd = ''
 
 # memory query cache
 memory_cache_enabled = on
