--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -1,13 +1,10 @@
-backend_hostname0 = '<%= node["postgres"]["replication"]["master"] %>'
-backend_port0 = 5432
-backend_weight0 = 1
-backend_data_directory0 = '/var/lib/postgresql/9.2/main/'
-backend_flag0 = 'ALLOW_TO_FAILOVER'
-backend_hostname1 = '<%= node["postgres"]["replication"]["slave"] %>'
-backend_port1 = 5432
-backend_weight1 = 1
-backend_data_directory1 = '/var/lib/postgresql/9.2/main/'
-backend_flag1 = 'ALLOW_TO_FAILOVER'
+<% node["postgres"]["cluster"]["servers"].each_with_index do |srv,i| %>
+backend_hostname<%= i %> = '<%= srv['ip'] %>'
+backend_port<%= i %> = 5432
+backend_weight<%= i %> = <%= srv['weight'] %>
+backend_data_directory<%= i %> = '/var/lib/postgresql/9.2/main/'
+backend_flag<%= i %> = 'ALLOW_TO_FAILOVER'
+<% end %>
 
 replication_mode = true
 load_balance_mode = true
@@ -21,7 +18,7 @@ pool_passwd = ''
 
 # memory query cache
 memory_cache_enabled = on
-memqcache_total_size = <%= node["postgres"]["shared_buffers"] %>
+memqcache_total_size = <%= node["postgres"]["memqcache_total_size"] %>
 memqcache_max_num_cache = 500000
 
 # do we want this? also requires ssl_key and ssl_cert
