Set pid to existing dir.

--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -14,6 +14,7 @@ pcp_port = 9898
 log_destination = 'syslog'
 insert_lock = on
 socket_dir = '/var/run/postgresql'
+pid_file_name = '/var/run/pgpool.pid'
 pool_passwd = ''
 
 # memory query cache
