Set pool passwd to ""

--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -117,6 +117,8 @@ max_pool = 4
                                    # Number of connections per pool
                                    # (change requires restart)
 
+pool_passwd = ''
+
 # - Life time -
 
 child_life_time = 300
