Added apt repo and correct passwd file.

--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -117,7 +117,7 @@ max_pool = 4
                                    # Number of connections per pool
                                    # (change requires restart)
 
-pool_passwd = ''
+pool_passwd = 'pcp.conf'
 
 # - Life time -
 
