--- a/templates/default/pgpool-regclass.sql.erb
+++ b/templates/default/pgpool-regclass.sql.erb
@@ -1,4 +1,4 @@
 CREATE OR REPLACE FUNCTION pg_catalog.pgpool_regclass(cstring)
 RETURNS oid
-AS '<%= "/usr/lib/postgresql/#{node["postgres"]["version"]}/lib/pgpool_regclass.so" %>', 'pgpool_regclass'
+AS '<%= "/usr/lib/postgresql/#{node["postgres"]["version"]}/lib/pgpool-regclass.so" %>', 'pgpool_regclass'
 LANGUAGE C STRICT;
