--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -1,11 +1,15 @@
 # do we want this? also requires ssl_key and ssl_cert
 # ssl = true
 
-# These settings do not seem to exist in this version!
 # memory query cache
 memory_cache_enabled = on
 memqcache_total_size = <%= node["postgres"]["memqcache_total_size"] %>
 memqcache_max_num_cache = 500000
+clear_memqcache_on_escalation = on
+
+# watchdog
+use_watchdog = on
+wd_hostname = '<%= node['postgres']['listen_addresses'] %>'
 
 # ----------------------------
 # pgPool-II configuration file
@@ -35,7 +39,7 @@ memqcache_max_num_cache = 500000
 
 # - pgpool Connection Settings -
 
-listen_addresses = '*'
+listen_addresses = '<%= node['postgres']['listen_addresses'] %>'
                                    # Host name or IP address to listen on:
                                    # '*' for all, '' for no TCP/IP connections
                                    # (change requires restart)
@@ -69,7 +73,7 @@ backend_port<%= i %> = 5432
                                    # Port number for backend <%= i %>
 backend_weight<%= i %> = <%= srv['weight'] %>
                                    # Weight for backend <%= i %> (only in load balancing mode)
-backend_data_directory<%= i %> = '/var/lib/postgresql/<%= node["postgres"]["version"] %>/main/'
+backend_data_directory<%= i %> = '/data/postgresql/<%= node["postgres"]["version"] %>/main/'
                                    # Data directory for backend <%= i %>
 backend_flag<%= i %> = 'ALLOW_TO_FAILOVER'
                                    # Controls various backend behavior
