Turn off watchdog, because we have only one pgpool server atm.

--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -8,8 +8,8 @@ memqcache_max_num_cache = 500000
 clear_memqcache_on_escalation = on
 
 # watchdog
-use_watchdog = on
-wd_hostname = '<%= node['postgres']['listen_addresses'] %>'
+# use_watchdog = on
+# wd_hostname = '<%= node['postgres']['listen_addresses'] %>'
 
 # ----------------------------
 # pgPool-II configuration file
