Use a different file for pool_passwd, because the pcp.conf is used for pcp and uses a different hashing algorithm.

--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -121,7 +121,7 @@ max_pool = 4
                                    # Number of connections per pool
                                    # (change requires restart)
 
-pool_passwd = 'pcp.conf'
+pool_passwd = 'pool_passwd'
 
 # - Life time -
 
