--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -2,7 +2,7 @@
 # ssl = true
 
 # memory query cache
-memory_cache_enabled = on
+memory_cache_enabled = <%= node["postgres"]["memory_cache_enabled"] %>
 memqcache_total_size = <%= node["postgres"]["memqcache_total_size"] %>
 memqcache_max_num_cache = 500000
 clear_memqcache_on_escalation = on
