--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -114,10 +114,10 @@ ssl = off
 
 # - Pool size -
 
-num_init_children = 50
+num_init_children = <%= node['postgres']['pgpool2']['num_init_children'] %>
                                    # Number of pools
                                    # (change requires restart)
-max_pool = 4
+max_pool = <%= node['postgres']['pgpool2']['max_pool'] %>
                                    # Number of connections per pool
                                    # (change requires restart)
 
