Fix double slashes in paths.

--- a/templates/default/pgpool_recovery.erb
+++ b/templates/default/pgpool_recovery.erb
@@ -40,23 +40,23 @@ $LOGGER "Creating file recovery.conf"
 echo "restore_command = '$SCP $HOSTNAME:$SRC_ARCHIVE_LOG_DIR/%f %p'" > $SRC_DATA/recovery.conf
 
 $LOGGER "Rsyncing directory base"
-$RSYNC $SRC_DATA/base/ $DST_HOST:$DST_DATA/base/
+$RSYNC $SRC_DATA/base/ $DST_HOST:$DST_DATAbase/
 $LOGGER "Rsyncing directory global"
-$RSYNC $SRC_DATA/global/ $DST_HOST:$DST_DATA/global/
+$RSYNC $SRC_DATA/global/ $DST_HOST:$DST_DATAglobal/
 $LOGGER "Rsyncing directory pg_clog"
-$RSYNC $SRC_DATA/pg_clog/ $DST_HOST:$DST_DATA/pg_clog/
+$RSYNC $SRC_DATA/pg_clog/ $DST_HOST:$DST_DATApg_clog/
 $LOGGER "Rsyncing directory pg_multixact"
-$RSYNC $SRC_DATA/pg_multixact/ $DST_HOST:$DST_DATA/pg_multixact/
+$RSYNC $SRC_DATA/pg_multixact/ $DST_HOST:$DST_DATApg_multixact/
 $LOGGER "Rsyncing directory pg_subtrans"
-$RSYNC $SRC_DATA/pg_subtrans/ $DST_HOST:$DST_DATA/pg_subtrans/
+$RSYNC $SRC_DATA/pg_subtrans/ $DST_HOST:$DST_DATApg_subtrans/
 $LOGGER "Rsyncing directory pg_tblspc"
-$RSYNC $SRC_DATA/pg_tblspc/ $DST_HOST:$DST_DATA/pg_tblspc/
+$RSYNC $SRC_DATA/pg_tblspc/ $DST_HOST:$DST_DATApg_tblspc/
 $LOGGER "Rsyncing directory pg_twophase"
-$RSYNC $SRC_DATA/pg_twophase/ $DST_HOST:$DST_DATA/pg_twophase/
+$RSYNC $SRC_DATA/pg_twophase/ $DST_HOST:$DST_DATApg_twophase/
 $LOGGER "Rsyncing directory pg_xlog"
-$RSYNC $SRC_DATA/pg_xlog/ $DST_HOST:$DST_DATA/pg_xlog/
+$RSYNC $SRC_DATA/pg_xlog/ $DST_HOST:$DST_DATApg_xlog/
 $LOGGER "Rsyncing file recovery.conf (with source deletion)"
-$RSYNC --remove-source-files $SRC_DATA/recovery.conf $DST_HOST:$DST_DATA/
+$RSYNC --remove-source-files $SRC_DATA/recovery.conf $DST_HOST:$DST_DATA
 
 $LOGGER "Executing pg_stop_backup"
 $PSQL -p $SRC_PORT -d $SRC_DBNAME -c 'select pg_stop_backup()'
