--- a/templates/default/pgpool_recovery2.erb
+++ b/templates/default/pgpool_recovery2.erb
@@ -28,6 +28,6 @@ do
 done
 
 $LOGGER "Executing pgpool_switch_xlog"
-$PSQL -p $SRC_PORT -d $SRC_DBNAME -c "select pgpool_switch_xlog('$DATADIR/archive_log')"
+$PSQL -p $SRC_PORT -c "select pgpool_switch_xlog('$DATADIR/archive_log')"
 
 exit 0
