--- a/templates/default/pgpool_recovery2.erb
+++ b/templates/default/pgpool_recovery2.erb
@@ -19,7 +19,7 @@ $LOGGER "Executing $BASENAME as user $ID"
 
 $LOGGER "Flushing sequence values to xlog"
 # Force to flush current value of sequences to xlog
-psql -p $SRC_PORT -t -c 'SELECT datname FROM pg_database WHERE NOT datistemplate AND datallowconn' template1
+psql -p $SRC_PORT -t -c 'SELECT datname FROM pg_database WHERE NOT datistemplate AND datallowconn' template1 |
 while read i
 do
   if [ "$i" != "" ];then
@@ -28,6 +28,6 @@ do
 done
 
 $LOGGER "Executing pgpool_switch_xlog"
-$PSQL -p $SRC_PORT -c "select pgpool_switch_xlog('$DATADIR/archive_log')"
+$PSQL -p $SRC_PORT -c 'select pg_switch_xlog()' template1
 
 exit 0
