--- a/templates/default/pgpool_recovery.erb
+++ b/templates/default/pgpool_recovery.erb
@@ -9,7 +9,7 @@ LOGGER="log /var/log/postgresql/pgpool_recovery.log"
 #"/usr/bin/logger -i -p local0.info -t pgpool"
 RSYNC="/usr/bin/rsync --archive --quiet --rsh=$SSH --delete"
 BASENAME=`/usr/bin/basename $0`
-HOSTNAME=`/bin/hostname`
+HOSTNAME=`/bin/hostname -f`
 ID=`/usr/bin/id -un`
 
 # $1 = Database cluster path of a master node.
@@ -17,7 +17,7 @@ ID=`/usr/bin/id -un`
 # $3 = Database cluster path of a recovery target node.
 
 #PG_HOME=/var/lib/postgresql
-SRC_ARCHIVE_LOG_DIR=/var/lib/postgresql/9.0/main2/archive_log
+SRC_ARCHIVE_LOG_DIR=<%= node["postgres"]["data_directory"] %>/archive_log
 
 SRC_DATA=$1
 DST_HOST=$2
