--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -355,15 +355,15 @@ system_db_password = ''
 # HEALTH CHECK
 #------------------------------------------------------------------------------
 
-health_check_period = 0
+health_check_period = 10
                                    # Health check period
                                    # Disabled (0) by default
 health_check_timeout = 20
                                    # Health check timeout
                                    # 0 means no timeout
-health_check_user = 'nobody'
+health_check_user = 'postgres'
                                    # Health check user
-health_check_password = ''
+health_check_password = '<%= node["postgres"]["pgpool2"]["users"]["postgres"] %>'
                                    # Password for health check user
 
 
