--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -219,7 +219,7 @@ reset_query_list = 'ABORT; DISCARD ALL'
 # REPLICATION MODE
 #------------------------------------------------------------------------------
 
-replication_mode = on
+replication_mode = off
                                    # Activate replication mode
                                    # (change requires restart)
 replicate_select = off
@@ -278,10 +278,10 @@ black_function_list = 'nextval,setval'
 # MASTER/SLAVE MODE
 #------------------------------------------------------------------------------
 
-master_slave_mode = off
+master_slave_mode = on
                                    # Activate master/slave mode
                                    # (change requires restart)
-master_slave_sub_mode = 'slony'
+master_slave_sub_mode = 'stream'
                                    # Master/slave sub mode
                                    # Valid values are combinations slony or
                                    # stream. Default is slony.
@@ -292,12 +292,12 @@ master_slave_sub_mode = 'slony'
 sr_check_period = 0
                                    # Streaming replication check period
                                    # Disabled (0) by default
-sr_check_user = 'nobody'
+sr_check_user = '<%= default["postgres"]["replication"]["user"] %>'
                                    # Streaming replication check user
                                    # This is necessary even if you disable
                                    # streaming replication delay check with
                                    # sr_check_period = 0
-sr_check_password = ''
+sr_check_password = '<%= default["postgres"]["replication"]["password"] %>'
                                    # Password for streaming replication check user
 delay_threshold = 0
                                    # Threshold before not dispatching query to standby node
@@ -331,7 +331,7 @@ enable_query_cache = off
                                    # Activates query cache
                                    # (change requires restart)
 
-pgpool2_hostname = ''
+pgpool2_hostname = '<%= node[:hostname] %>'
                                    # Set pgpool2 hostname
                                    # (change requires restart)
 
