--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -292,12 +292,12 @@ master_slave_sub_mode = 'stream'
 sr_check_period = 0
                                    # Streaming replication check period
                                    # Disabled (0) by default
-sr_check_user = '<%= default["postgres"]["replication"]["user"] %>'
+sr_check_user = '<%= node["postgres"]["replication"]["user"] %>'
                                    # Streaming replication check user
                                    # This is necessary even if you disable
                                    # streaming replication delay check with
                                    # sr_check_period = 0
-sr_check_password = '<%= default["postgres"]["replication"]["password"] %>'
+sr_check_password = '<%= node["postgres"]["replication"]["password"] %>'
                                    # Password for streaming replication check user
 delay_threshold = 0
                                    # Threshold before not dispatching query to standby node
